added doc links

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -1,10 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Demos\n",
+    "\n",
+    "## Documentation\n",
+    "* [ipywidgets](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20List.html)\n",
+    "* [bqplot](https://bqplot.readthedocs.io/en/latest/api_documentation.html#bqplot-package)\n",
+    "* [voila](https://github.com/voila-dashboards/voila)\n",
     "\n",
     "## Widgets\n",
     "* [ipywidgets](Widgets/ipywidgets.ipynb)\n",
@@ -19,8 +25,12 @@
     "  * [Bubble Chart](Wealth%20Of%20Nations/Bubble%20Chart.ipynb)\n",
     "  * [Choropleth](Wealth%20Of%20Nations/Choropleth.ipynb)\n",
     " \n",
+    "### Finance\n",
+    "* [S&P 500 Index](Time%20Series.ipynb)\n",
+    " \n",
     "### Machine Learning\n",
     "* [Gradient Descent](ML/Gradient%20Descent.ipynb)\n",
+    "* [Colors From Masters](ML/Colors%20From%20Masters/MasterColors.ipynb)\n",
     "* (More examples in https://github.com/ChakriCherukuri/mlviz)"
    ]
   }
